# agora-softplayer

./: .gitignore  .gitmodules  README.md  agora-softplayer.spec  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
src/agora_softplayer/: __init__.py  __main__.py  _slideshow.py  aux_server.py  browser.py  cms_runner.py  credentials.py  shell_server.py  windows_player.py
src/agora_softplayer/shims/: __init__.py  board.py  identity.py  probes.py
tests/: __init__.py  conftest.py  test_aux_server.py  test_browser.py  test_cms_runner.py  test_credentials.py  test_main_paths.py  test_shell_server.py  test_shims.py  test_slideshow_sequencer.py  test_windows_player.py
